2017-??-??: 3.4.0

	Bugfixes:

	all : fixed `using` picking up non-static abstract functions (#5888)
	all : fixed issue with side-effect detection when optimizing (#5911)
	php7 : Allow user-defined modules in `php` package (#5921)
	php7 : Dereference some of `php.Syntax` methods if required (#5923)

2016-12-24: 3.4.0-RC2

	New features:

	js : added API documentation to HTML externs (#5868)
	php : added php7 target, enabled with -D php7

	Bugfixes:

	all : fixed top-down inference infinite recursion issue (#5848)
	all : fixed regression in Compiler.include (#5847)
	all : fixed Not_found exception related to try/catch (#5851)
	all : fixed metadata completion showing up in trace arguments (#5775)
	all : fixed problem with useless pattern detection (#5873)
	all : fixed issue with toString handling in trace arguments (#5858)
	all : fixed inline constructor scoping (#5855)
	cpp : fixed issue with cpp.Pointer variables being eliminated (#5850)
	js : added Notification API to HTML externs (#5852)
	js : fixed several options structures in HTML externs (#5849)
	php/cs : FileSystem.deleteFile() and FileSystem.deleteDirectory() now throw on non-existent path (#5742)
	php/lua : fixed field access on `null` (#4988)
	php : fixed static field access on a `Class<T>` stored to a field (#5383)
	php : fixed invalid detection of `NativeArray` by `Std.is()` (#5565)
	php : fixed `stdin()`, `stdout()`, `stderr()` of `Sys` to use predefined constants for corresponding channels (#5733)
	php : fixed Std.parseInt() on hexstrings for PHP7+ (#5521)
	php : fixed typed cast in assign operations (#5135)
	php : fixed exception thrown by `Reflect.fields(o)` when `o` is `Class<T>` (#5608)
	php : fixed json encoding of empty objects (#5015)
	php : fixed checking floats for equality (#4260)
	php : throw if invalid json string supplied to Json.parse() (#4592)
	php : fixed ssl connections (#4581)
	php : fixed writing bytes containing zero byte to MySQL & SQLite (#4489)